--- a/configuration.properties
+++ b/configuration.properties
@@ -1,2 +1,6 @@
 browser=chrome
 hypnotesUrl=https://test.hypnotes.net/
+baseURI=https://test.hypnotes.net/api
+therapistUsername=hypnotes2022tr1@gmail.com
+Password=Aydinlik2023/
+
